# Cloud-Computing

./: README.md  오픈소스_데이터_분석_11강.ipynb  오픈소스_데이터_분석_3강.ipynb  파이썬_10강_실습(학습자용).ipynb  파이썬_12강_실습(학습자용).ipynb  파이썬_14_15강_실습(학습자용).ipynb  파이썬_4강_실습(학습자용).ipynb  파이썬프로그래밍기초_12강_실습(원본).ipynb  파이썬프로그래밍기초_14강_실습(원본).ipynb
function_app/: weather_forecast.py
knou_mall/front_page/: Cloud-init
knou_mall/front_page/templates/: basket.html  goods.html  goods_view.html  index.html
knou_mall/web_server/: Cloud-init  pyproject.toml
knou_mall/web_server/knou_shop2/: database.py
workbook/: media_services.py
workbook/function_app/: mail_send.py
